--- a/packages/search.html
+++ b/packages/search.html
@@ -6,4 +6,32 @@ title: Search
 {% capture active %}{% t nav_key.packages %}{% endcapture %}
 {% include nav.html active=active %}
 
-{% tf packages/search.html %}
+<section class="front-section">
+  <div class="container">
+    <div class="col-wide">
+
+      <h2> <a href='{{ site.baseurl }}/packages'> {% t nav_key.packages %}</a> / {{page.title}}</h2>
+
+      <form class="search-form" action="{{ site.baseurl }}/packages/search" method="get">
+        <input type="text" name="query" id="search-query" class="search-box" placeholder="{% t search_for_a_project %}">
+        <input type="submit" value="" class="search-btn">
+      </form>
+      </br>
+
+      <div style="margin-left: 30px; margin-right: 100px;" id="package-search-results"></div>
+
+    </div>
+
+  </div>
+</section>
+
+<section class="front-section shaded">
+  <div class="container">
+    <div class="col-wide">
+      <!-- <h2 id="faqs">FAQ</h2> -->
+
+      {% tf packages/footer_text.html %}
+
+    </div>
+  </div>
+</section>
