--- a/packages/index.html
+++ b/packages/index.html
@@ -7,4 +7,74 @@ description: A rich ecosystem of high-performance code
 {% capture active %}{% t nav_key.packages %}{% endcapture %}
 {% include nav.html active=active %}
 
-{% tf packages/index.html %}
+<section class="masthead">
+  <h1>{{ page.title }}</h1>
+  <h3>{{ page.description }}</h3>
+</section>
+
+<section class="front-section shaded">
+  <div class="container">
+    <h2>{% t packages.find_a_package %}</h2>
+
+    <div class="col-center">
+      <form class="search-form" action="{{ site.baseurl }}/packages/search" method="get">
+        <input type="text" name="query" class="search-box" placeholder="Search for a package">
+        <input type="submit" value="" class="search-btn">
+      </form>
+    </div>
+
+    <div class="col-narrow">
+      {% tf packages/package_index.html %}
+    </div>
+
+    <div class="col-narrow">
+      <h3><i data-feather="tag"></i>
+        {% t packages.featured_topics %}
+      </h3>
+      <div id="package-topics"></div>
+    </div>
+
+  </div>
+</section>
+
+<section class="front-section">
+  <div class="container">
+    <h2>{% t packages.browse %}</h2>
+
+    <div class="container-flex">
+
+      {% for sitePage in site.pages %}
+
+      {% if sitePage.code_category %}
+      {% if sitePage.code_category != 'preview' %}
+      <div class="col-flex">
+        <h3>
+          {% if sitePage.feather-icon %}
+          <i data-feather="{{ sitePage.feather-icon }}"></i>
+          {% endif %}
+          <a href="{{ site.baseurl }}{{ sitePage.url }}" >
+            {{ sitePage.title }}
+            {% if sitePage.code_category == 'fpm' %}
+            {% assign catProjects =  site.data.fpm_registry_index.packages %}
+            {% else %}
+            {% assign catProjects =  site.data.package_index | where_exp:"project", "project.categories contains sitePage.code_category"%}
+            {% endif %}
+            ({{ catProjects | size }})
+          </a></h3>
+          <p> {{ sitePage.description }} </p>
+      </div>
+      {% endif %}
+      {% endif %}
+
+      {% endfor%}
+    </div>
+  </div>
+</section>
+
+<section class="front-section shaded">
+  <div class="container">
+    <div class="col-wide">
+      {% tf packages/footer_text.html %}
+    </div>
+  </div>
+</section>
