Localize page titles

--- a/learn/index.html
+++ b/learn/index.html
@@ -1,15 +1,15 @@
 ---
 layout: default
-title: Learn Fortran
-description: Learning resources for beginners and experts alike
+title: page.learn.title
+description: page.learn.description
 ---
 
 {% capture active %}{% t nav_key.learn %}{% endcapture %}
 {% include nav.html active=active %}
 
 <section class="masthead">
-  <h1>{{ page.title }}</h1>
-  <h3>{{ page.description }}</h3>
+  <h1>{% t page.title %}</h1>
+  <h3>{% t page.description %}</h3>
 </section>
 
 <section class="front-section shaded">
@@ -26,10 +26,10 @@ description: Learning resources for beginners and experts alike
     </div>
 
     <div class="col-narrow">
+      {% tf learn/looking_for_help.html %}
       <a class="button center blue" href="https://fortran-lang.discourse.group/" target="_blank">
-        {% tf learn/looking_for_help.html %}
         <i class="fab fa-discourse"></i>
-        {% t fortran_lang_discourse %}
+        {% t learn.fortran_lang_discourse %}
       </a>
 
     </div>
