--- a/packages/search.html
+++ b/packages/search.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Search
+title: page.packages.search.title
 ---
 
 {% capture active %}{% t nav_key.packages %}{% endcapture %}
@@ -10,7 +10,7 @@ title: Search
   <div class="container">
     <div class="col-wide">
 
-      <h2> <a href='{{ site.baseurl }}/packages'> {% t nav_key.packages %}</a> / {{page.title}}</h2>
+      <h2> <a href='{{ site.baseurl }}/packages'> {% t nav_key.packages %}</a> / {% t page.title %}</h2>
 
       <form class="search-form" action="{{ site.baseurl }}/packages/search" method="get">
         <input type="text" name="query" id="search-query" class="search-box" placeholder="{% t search_for_a_project %}">
