--- a/community/index.html
+++ b/community/index.html
@@ -1,15 +1,15 @@
 ---
 layout: default
-title: Fortran-lang Community
-description: Collaboration for the advancement of Fortran
+title: page.community.title
+description: page.community.description
 ---
 
 {% capture active %}{% t nav_key.community %}{% endcapture %}
 {% include nav.html active=community %}
 
 <section class="masthead">
-  <h1>{{ page.title }}</h1>
-  <h3>{{ page.description }}</h3>
+  <h1>{% t page.title %}</h1>
+  <h3>{% t page.description %}</h3>
 </section>
 
 <section class="front-section shaded">
