Localize News keyword at the main page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: page.home.title
     <div class="col-narrow">
 
       <div class="news-section">
-        <h2 id="news"><i class="far fa-newspaper"></i> News</h2>
+        <h2 id="news"><i class="far fa-newspaper"></i> {% t nav_key.news %}</h2>
 
         {% comment %} <dl class="nvim-posts"> {% endcomment %}
           <table>
