Localize package description correctly

--- a/packages/index.html
+++ b/packages/index.html
@@ -61,7 +61,7 @@ description: page.packages.description
             {% endif %}
             ({{ catProjects | size }})
           </a></h3>
-          <p> {{ sitePage.description }} </p>
+          <p> {% t sitePage.description %} </p>
       </div>
       {% endif %}
       {% endif %}
