Jekyll build, preview pr/201 (on:pull_request)

--- a/pr/201/es/index.html
+++ b/pr/201/es/index.html
@@ -170,7 +170,7 @@ patrones de programación paralela que se adaptan mejor a su problema.
     <div class="col-narrow">
 
       <div class="news-section">
-        <h2 id="news"><i class="far fa-newspaper"></i> News</h2>
+        <h2 id="news"><i class="far fa-newspaper"></i> Noticias</h2>
 
         
           <table>
