--- a/pr/201/fr/index.html
+++ b/pr/201/fr/index.html
@@ -173,7 +173,7 @@ parallèle adaptés à vos problèmes.
     <div class="col-narrow">
 
       <div class="news-section">
-        <h2 id="news"><i class="far fa-newspaper"></i> News</h2>
+        <h2 id="news"><i class="far fa-newspaper"></i> Actualités</h2>
 
         
           <table>
