Localize get involved header and package search placeholder

--- a/community/index.html
+++ b/community/index.html
@@ -86,7 +86,7 @@ description: page.community.description
 
 <section class="front-section">
   <div class="container">
-    <h2>Get Involved</h2>
+    <h2>{% t community.get_involved %}</h2>
 
     <div class="col-narrow">
       {% tf community/join_the_discussion.html %}
