--- a/packages/index.html
+++ b/packages/index.html
@@ -18,7 +18,8 @@ description: page.packages.description
 
     <div class="col-center">
       <form class="search-form" action="{{ site.baseurl }}/packages/search" method="get">
-        <input type="text" name="query" class="search-box" placeholder="Search for a package">
+        {% capture placeholder %}{% t packages.search_for_a_package %}{% endcapture %}
+        <input type="text" name="query" class="search-box" placeholder="{{ placeholder }}">
         <input type="submit" value="" class="search-btn">
       </form>
     </div>
