Jekyll build, commit 9b204ee536223b161d41c4400c80e1a9f9e3cddb (on:push)

--- a/packages/data-types.html
+++ b/packages/data-types.html
@@ -382,7 +382,7 @@
               Parallel Sparse BLAS
           </td></tr>
           <tr><td colspan="7" class="light small">
-            <b>Tags: </b>linear algebra mpi
+            <b>Tags: </b>linear-algebra mpi
         </td></tr>
           <tr><td colspan="7"></td></tr>
           
