Jekyll build, commit 6927bb8f9e3ab7b913115d64371b122253559681 (on:push)

--- a/learn/index.html
+++ b/learn/index.html
@@ -192,7 +192,7 @@
           <a href="/learn/os_setup" >
             Setting up your OS
           </a></h3>
-          <p> How to setup a Fortran developement environment in Windows, Linux and macOS. </p>
+          <p> How to install a Fortran compiler and set up a development environment in Windows, Linux and macOS. </p>
         </div>
       
       </div>
