--- a/learn/os_setup/ides.html
+++ b/learn/os_setup/ides.html
@@ -562,10 +562,8 @@ IDEs are recommended for beginner programmers, since it is possible to start cod
   <li><a href="https://www.nag.com/content/nag-fortran-builder-0">NAG Fortran Builder</a> is a commercial product, available in Windows and MacOS and supports NAG’s own Fortran Compiler.</li>
   <li><a href="https://www.silverfrost.com/16/ftn95/plato.aspx">Plato</a> is a commercial product, cross-platform, comes with Silverfrost’s Fortran FTN95 own Fortran compiler.</li>
   <li><a href="https://simplyfortran.com/">SimplyFortran</a> is a commercial product, cross-platform with support of the GNU Fortran compiler.</li>
-  <li><a href="https://visualstudio.microsoft.com/">Visual Studio</a> its <em>Community Edition 2019</em> is a free product, available only in Windows and supports only the commercial* Intel’s Fortran compiler.</li>
+  <li><a href="https://visualstudio.microsoft.com/">Visual Studio</a> its <em>Community Edition 2019</em> is a free product, available in Windows and macOS and supports only Intel’s Fortran compiler, now bundled with many other free-to-use HPC tools under <em>Intel oneAPI</em>.</li>
 </ul>
-
-<p>*Intel offers a commercial Fortran compiler. However, if you are a student, an educator, or an open-source contributor, you may <a href="https://software.intel.com/content/www/us/en/develop/articles/qualify-for-free-software.html">qualify for free software</a>.</p>
 
 
       <div class="container-flex">
