--- a/learn/os_setup/text_editors.html
+++ b/learn/os_setup/text_editors.html
@@ -589,7 +589,7 @@ The following extensions are suggested for Fortran developement:</p>
 <p>The following are not essential but more advanced users might find useful:</p>
 <ul>
   <li><a href="https://marketplace.visualstudio.com/items?itemName=ms-vscode-remote.remote-wsl">Remote - WSL by Microsoft</a></li>
-  <li><a href="https://marketplace.visualstudio.com/items?itemName=eamodio.gitlens">GitLens — Git supercharged by Eric Amodio</a></li>
+  <li><a href="https://marketplace.visualstudio.com/items?itemName=eamodio.gitlens">GitLens - Git supercharged by Eric Amodio</a></li>
   <li><a href="https://marketplace.visualstudio.com/items?itemName=Blamsoft.fprettify">fprettify by Blamsoft</a></li>
   <li><a href="https://marketplace.visualstudio.com/items?itemName=tamasfe.even-better-toml">Even Better TOML by tamasfe</a>. For Fortran developers that are using the new <a href="https://github.com/fortran-lang/fpm">fpm</a> <em>Fortran Package Manager</em>, a TOML language support might come in handy.</li>
 </ul>
