Closes #242; Author: @Beliavsky

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ title: Home
       Fortran is a relatively small language that is surprisingly easy 
       to learn and use.
       Expressing most mathematical and arithmetic operations over large 
-      arrays is as simple as you'd write them as equations on a whiteboard.
+      arrays is as simple as writing them as equations on a whiteboard.
 
       <h3>Versatile</h3>
       Fortran allows you to write code in a style that best fits your problem:
