--- a/index.html
+++ b/index.html
@@ -120,31 +120,31 @@
       <h2>Features</h2>
 
       <h3>High performance</h3>
-      Fortran has been designed from the ground-up for computationally 
+      Fortran has been designed from the ground up for computationally
       intensive applications in science and engineering.
       Mature and battle-tested compilers and libraries allow you to write
       code that runs close to the metal, fast.
 
       <h3>Statically and strongly typed</h3>
-      Fortran is statically and strongly typed, which allows the 
+      Fortran is statically and strongly typed, which allows the
       compiler to catch many programming errors early on for you.
       This also allows the compiler to generate efficient binary code.
 
       <h3>Easy to learn and use</h3>
-      Fortran is a relatively small language that is surprisingly easy 
+      Fortran is a relatively small language that is surprisingly easy
       to learn and use.
-      Expressing most mathematical and arithmetic operations over large 
+      Expressing most mathematical and arithmetic operations over large
       arrays is as simple as writing them as equations on a whiteboard.
 
       <h3>Versatile</h3>
       Fortran allows you to write code in a style that best fits your problem:
-      Imperative, procedural, array-oriented, object-oriented, or functional.
+      imperative, procedural, array-oriented, object-oriented, or functional.
 
       <h3>Natively parallel</h3>
       Fortran is a natively parallel programming language
       with intuitive array-like syntax to communicate data between CPUs.
-      You can run almost the same code on a single CPU, 
-      on a shared-memory multicore system, or on a distributed-memory 
+      You can run almost the same code on a single CPU,
+      on a shared-memory multicore system, or on a distributed-memory
       HPC or cloud-based system.
       Coarrays, teams, events, and collective subroutines
       allow you to express different parallel programming patterns
@@ -212,7 +212,7 @@
 
       <dl class="faqs">
         <h3>What is the status of Fortran?</h3>
-        Fortran is still in active development. 
+        Fortran is still in active development.
 	The latest revision of the language is <a href="https://isotc.iso.org/livelink/livelink?func=ll&objId=19441669&objAction=Open">Fortran 2018</a>,
 	and the next one, with the working title Fortran 202x,
 	is planned for release in the next few years.
@@ -224,16 +224,16 @@
 
         <h3>What is Fortran used for?</h3>
 	Fortran is mostly used in domains that adopted computation
-	early--science and engineering. 
-        These include numerical weather and ocean prediction, 
+	early--science and engineering.
+        These include numerical weather and ocean prediction,
 	computational fluid dynamics, applied math, statistics, and finance.
-	Fortran is the dominant language of High Performance Computing,
-	and is used to 
+	Fortran is the dominant language of High Performance Computing
+	and is used to
 	<a href="https://top500.org">benchmark the fastest supercomputers in the world</a>.
 
         <h3>Should I use Fortran for my new project?</h3>
 	If you're writing a program or a library to perform fast arithmetic
-	computation over large numeric arrays, Fortran is the optimal tool 
+	computation over large numeric arrays, Fortran is the optimal tool
 	for the job.
 
       </dl>
@@ -271,7 +271,7 @@ the latest news.</p>
 
       <h3><i class="fab fa-github"></i> Open source</h3>
       <p>
-      Contribute code, report bugs and request features at 
+      Contribute code, report bugs and request features at
       <a href="https://github.com/fortran-lang" target="_blank" >GitHub</a>.
       </p>
 
@@ -288,7 +288,7 @@ the latest news.</p>
       <h3>Write proposals</h3>
       <p>
       Have an idea about how to improve the language?
-      You can write new proposals or contribute to existing proposals 
+      You can write new proposals or contribute to existing proposals
       to the Fortran Standard Committee
       on <a href="https://github.com/j3-fortran/fortran_proposals">GitHub</a>.
       </p>
