Jekyll build, preview pr/246 (on:pull_request)

--- a/pr/246/learn/best_practices/style_guide.html
+++ b/pr/246/learn/best_practices/style_guide.html
@@ -1226,8 +1226,9 @@ you haven’t seen in while.</p>
 
 <h2 id="indentation">Indentation</h2>
 
-<p>Use 4 spaces indentation (this is again a matter of preference as some
-people prefer 2 or 3 spaces).</p>
+<p>Use a consistent indentation to make your code readable.
+The amount of indentation is a matter of preference, the most common choices
+are two, three or four spaces.</p>
 
 <h2 id="comparison-to-other-languages">Comparison to Other Languages</h2>
 
