Jekyll build, preview pr/246 (on:pull_request)

--- a/pr/246/learn/best_practices/element_operations.html
+++ b/pr/246/learn/best_practices/element_operations.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Fortran Programming Language">
-    <title>Element-wise Operations on Arrays Using Subroutines/Functions - Fortran Programming Language</title>
+    <title>Element-wise Operations on Arrays - Fortran Programming Language</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/themes/smoothness/jquery-ui.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css" rel="stylesheet">
@@ -702,7 +702,7 @@
       
         <li>
           <b><a href="/pr/246/learn/best_practices/element_operations">
-            Element-wise Operations on Arrays Using Subroutines/Functions</a></b>
+            Element-wise Operations on Arrays</a></b>
           <ul id="page-nav"></ul>
         </li>
         
@@ -924,7 +924,7 @@
 
     <div class="newsletter col-right">
 
-      <h1>Element-wise Operations on Arrays Using Subroutines/Functions</h1>
+      <h1>Element-wise Operations on Arrays</h1>
 
       <div style="margin-top: 0.5em; margin-bottom: 0.5em;">
         <i></i>
