--- a/compilers/index.html
+++ b/compilers/index.html
@@ -143,7 +143,7 @@ This project is under active development.</p>
 
 <h3 id="current-flang">Current Flang</h3>
 
-<p><a href="https://github.com/flang-compiler/flang">Flang</a> is an open source compiler 
+<p><a href="https://github.com/flang-compiler/flang">Flang</a> is an open source compiler
 based on the NVIDIA/PGI commercial compiler.</p>
 
 <h3 id="lfortran">LFortran</h3>
@@ -290,6 +290,8 @@ features from Fortran-2008 (ISO/IEC 1539-1:2010).</p>
 not list them above:</p>
 
 <ul>
+  <li>Apogee</li>
+  <li>Edinburgh Portable Compilers</li>
   <li>Hewlett Packard</li>
   <li>Watcom</li>
   <li>PathScale</li>
