--- a/compilers/index.html
+++ b/compilers/index.html
@@ -159,6 +159,7 @@ compiler.</p>
 is Intel’s suite of compilers, tools, and libraries for Fortran, C, C++, and
 Python. Intel oneAPI HPC Toolkit provides
 <a href="https://software.intel.com/content/www/us/en/develop/articles/intel-oneapi-fortran-compiler-release-notes.html">two Fortran compilers</a>:</p>
+
 <ul>
   <li>Intel Fortran Compiler Classic (<code class="highlighter-rouge">ifort</code>), a mature compiler
 with full Fortran 2018 support; and</li>
@@ -239,14 +240,12 @@ generation back-end. Available as part of the Arm Compiler for Linux package.</p
 
 <h3 id="absoft">Absoft</h3>
 
-<p><a href="https://www.absoft.com/products/">Our compilers</a> build faster code more
-efficiently than ever before. Pro Fortran delivers Absoft’s exclusive AP load
-balancing (offering an increase in performance of up to 20%!), AVX, OpenMP 3.1,
-highly extended Fortran 95 compiler with F2003 and F2008 features,, FX3
-graphical debugger, native tool suite integration, AMDAL HPC scientific and
-engineering library, and much more. Plus, Pro Fortran is the only compiler with
-Fast Data Visualization, an Absoft exclusive technology for graphical rendering
-and data output.</p>
+<p><a href="https://www.absoft.com/products/">Absoft compilers</a> include Pro Fortran
+delivering Absoft’s exclusive AP load balancing, AVX, OpenMP 3.1,
+extended Fortran 95 compiler with F2003 and F2008 features, FX3 graphical debugger,
+native tool suite integration, AMDAL HPC scientific and engineering library, and more.
+Pro Fortran includes Fast Data Visualization, an Absoft exclusive technology for
+graphical rendering and data output.</p>
 
 <h3 id="oracle--sun">Oracle / Sun</h3>
 
@@ -261,13 +260,12 @@ is highly optimized for Oracle systems, on-premise and in the cloud</p>
 
 <h3 id="lahey--fujitsu">Lahey / Fujitsu</h3>
 
-<p>Combining the 32/64-bit LGF Rainier compiler with the classic <a href="https://lahey.com/">Lahey/Fujitsu
-LF95</a> compiler, LF Professional v7.8 delivers! LGF Rainier
-has full Fortran 95/90/77 compliance with extensive support for the Fortran 2003
-and 2008 standards. Lahey/Fujitsu LF95 offers best in class diagnostics.
+<p>LF Professional v7.8 combines the 32/64-bit LGF Rainier compiler with the classic
+<a href="https://lahey.com/">Lahey/Fujitsu LF95</a> compiler. LGF Rainier has full Fortran
+95/90/77 compliance with extensive support for the Fortran 2003 and 2008 standards.
+Lahey/Fujitsu LF95 offers best in class diagnostics.
 Includes the automatic-parallelizing GFortran compiler, Lahey/Fujitsu Fortran 95
-compiler, Visual Studio 2015 Shell (compatible with VS2017), Lahey’s Exclusive
-Visual Studio Fortran support, Winteracter WiSK Graphics package, and more!</p>
+compiler, Visual Studio Fortran support, Winteracter WiSK Graphics package, and more.</p>
 
 <h3 id="silverfrost-ftn95">Silverfrost FTN95</h3>
 
