Jekyll build, commit 3963caf6f4dc7789e71ed8c699659b921b25cab7 (on:push)

--- a/compilers/index.html
+++ b/compilers/index.html
@@ -274,7 +274,9 @@ compliant compiler, capable of producing fast executables for Win32 and for
 Microsoft .NET. FTN95 ships with the world’s best runtime checking and a great
 range of supporting software. All standard and many vendor-specific legacy
 language features are supported, so that Fortran projects may be any combination
-of Fortran 77, Fortran 90 and Fortran 95.</p>
+of Fortran 77, Fortran 90 and Fortran 95.
+Some features of Fortran 2003 and 2008 have been <a href="https://www.silverfrost.com/19/ftn95/support/ftn95_revision_history.aspx">added</a>.
+Silverfrost Fortran runs on Windows / x86_64. There is a free personal edition.</p>
 
 <h3 id="nec">NEC</h3>
 
