Jekyll build, commit f4b4e07251164a998d3be5c584e882e81706ac2d (on:push)

--- a/packages/examples.html
+++ b/packages/examples.html
@@ -177,7 +177,7 @@
               Easy examples of scientific computing with modern, powerful, easy Fortran 2018 standard
           </td></tr>
           <tr><td colspan="7" class="light small">
-            <b>Tags: </b>block coarray contiguous mpi namelist openmp random submodule iso_fortran_env
+            <b>Tags: </b>block coarray contiguous namelist openmp random submodule iso_fortran_env
         </td></tr>
           <tr><td colspan="7"></td></tr>
           
