--- a/packages/scientific.html
+++ b/packages/scientific.html
@@ -584,7 +584,7 @@
               
           </tr>
           <tr><td colspan="7" class="light">
-              classical molecular dynamics code developped at Daresbury Laboratory since 1992
+              classical molecular dynamics code developed at Daresbury Laboratory since 1992
           </td></tr>
           <tr><td colspan="7" class="light small">
             <b>Tags: </b>molecular-dynamics mpi
