Jekyll build, commit 66ed1d4f35b01c01ec54d9494d2e9de5980ae0c1 (on:push)

--- a/learn/best_practices.html
+++ b/learn/best_practices.html
@@ -902,7 +902,7 @@
 
       <p>This mini-book collects a modern canonical way of doing things in Fortran.
 It serves as a style guide and best practice recommendation for popular topics
-and common tasks. Generally, a cononical solution or pattern is presented and
+and common tasks. Generally, a canonical solution or pattern is presented and
 discussed. It is meant for programmers with basic familarity of the Fortran syntax
 and programming in general.</p>
 
