--- a/learn/best_practices/allocatable_arrays.html
+++ b/learn/best_practices/allocatable_arrays.html
@@ -993,7 +993,7 @@ for the dummy arguments anymore.</p>
 </span></code></pre></div></div>
 
 <p>Passing an unallocated array in this context will lead to an invalid memory access.
-Allocatable arrays can be passed to <code class="highlighter-rouge">optional</code> dummy arguments, if they are unallocated
+Allocatable arrays can be passed to <code class="highlighter-rouge">optional</code> dummy arguments – if they are unallocated
 the argument will not be present. The <code class="highlighter-rouge">allocatable</code> attribute is not limited to
 arrays and can also be associated with scalars, which can be useful in combination
 with <code class="highlighter-rouge">optional</code> dummy arguments.</p>
@@ -1029,7 +1029,7 @@ using the <code class="highlighter-rouge">move_alloc</code> intrinsic subroutine
 </span><span class="k">end</span><span class="w"> </span><span class="k">subroutine</span><span class="w"> </span><span class="n">resize</span><span class="w">
 </span></code></pre></div></div>
 
-<p>Finally, allocations do not initialize the array, the content of the uninitialized
+<p>Finally, allocations do not initialize the array. The content of the uninitialized
 array is most likely just the bytes of whatever was previously at the respective address.
 The allocation supports initialization using the source attribute:</p>
 
