--- a/learn/best_practices/file_io.html
+++ b/learn/best_practices/file_io.html
@@ -980,8 +980,8 @@ To create a new file use</p>
 </span><span class="k">close</span><span class="p">(</span><span class="n">io</span><span class="p">)</span><span class="w">
 </span></code></pre></div></div>
 
-<p>Alternatively, <code class="highlighter-rouge">status="replace"</code> can be used to overwrite an existing file,
-it is highly recommended to first check for the existence of a file before deciding
+<p>Alternatively, <code class="highlighter-rouge">status="replace"</code> can be used to overwrite an existing file.
+It is highly recommended to first check for the existence of a file before deciding
 on the <em>status</em> to use.
 To append to an output file the <em>position</em> keyword can be specified explicitly with</p>
 
@@ -1009,7 +1009,7 @@ with</p>
 </span><span class="k">end</span><span class="w"> </span><span class="k">if</span><span class="w">
 </span></code></pre></div></div>
 
-<p>A useful IO feature are scratch files, which can be opened with <code class="highlighter-rouge">status="scratch"</code>.
+<p>A useful IO feature is scratch files, which can be opened with <code class="highlighter-rouge">status="scratch"</code>.
 They are automatically deleted after closing the unit identifier.</p>
 
 
