--- a/learn/best_practices/integer_division.html
+++ b/learn/best_practices/integer_division.html
@@ -911,7 +911,7 @@
         
       </div>
 
-      <p>Fortran distinguishs between floating point and integer arithmetic.
+      <p>Fortran distinguishes between floating point and integer arithmetic.
 It is important to note that division for integers is always using
 integer arithmetic.
 Consider the following example for integer division of an odd number:</p>
