--- a/learn/best_practices/style_guide.html
+++ b/learn/best_practices/style_guide.html
@@ -911,7 +911,7 @@
 
 <p>Ultimately this is a matter of preference. Here is a style guide that we
 like and that seems to be prevalent in most scientific codes (as well as
-the Fortran standard library) and you are welcome to follow it.</p>
+the Fortran standard library), and you are welcome to follow it.</p>
 
 <ol>
   <li>Use lowercase for all Fortran constructs (<code class="highlighter-rouge">do</code>, <code class="highlighter-rouge">subroutine</code>,
