Jekyll build, commit da0300084fcd6b25d0aa92906e1b30d3e193ab76 (on:push)

--- a/learn/best_practices/multidim_arrays.html
+++ b/learn/best_practices/multidim_arrays.html
@@ -929,7 +929,7 @@ your application, usually when performing operations on a multidimensional
 the sequential access should always advance in unity strides.</p>
 
 <p>In the following example the inverse distance between two sets of points
-is evaluated, note that the points are stored contiguously in the arrays
+is evaluated. Note that the points are stored contiguously in the arrays
 <code class="highlighter-rouge">xyz1</code>/<code class="highlighter-rouge">xyz2</code>, while the inner-most loop is advancing the left-most
 index of the matrix <code class="highlighter-rouge">a</code>.</p>
 
