--- a/learn/best_practices/modules_programs.html
+++ b/learn/best_practices/modules_programs.html
@@ -955,9 +955,9 @@ end module fpm_toml
 </code></pre></div></div>
 
 <p>There are a few things in this example module to highlight. First, every module
-starts with comments documenting the purpose and content of the module,
-similarly, every procedure starts with a comment briefly describing its
-purse and the intent of the dummy arguments. Documentation is one of the most
+starts with comments documenting the purpose and content of the module.
+Similarly, every procedure starts with a comment briefly describing its
+purpose and the intent of the dummy arguments. Documentation is one of the most
 important parts of creating long-living software, regardless of language.</p>
 
 <p>Second, imports (<em>use</em>) and exports (<em>public</em>) are explicitly given, this
@@ -965,13 +965,13 @@ allows on a glance at the module source to check the used and available
 procedures, constants and derived types. The imports are usually limited
 to the module scope rather than reimported in every procedure or interface
 scope. Similarly, exports are made explicitly by adding a <em>private</em> statement
-one a single line and explicitly listing all exported symbols in <em>public</em>
+on a single line and explicitly listing all exported symbols in <em>public</em>
 statements.</p>
 
 <p>Finally, the <code class="highlighter-rouge">implicit none</code> statement works for the whole module and there
 is no need to repeat it within each procedure.</p>
 
-<p>Variables inside a module are static (<em>implicitly saved</em>), it is highly
+<p>Variables inside a module are static (<em>implicitly saved</em>). It is highly
 recommended to limit the usage of module variables to constant expressions,
 like parameters or enumerators only or export them as <em>protected</em> rather
 than <em>public</em>.</p>
@@ -1049,9 +1049,9 @@ trapezoidal integration rule given here.</p>
 Several submodules can be used to reduce the compilation load for huge modules.</p>
 
 <p>Finally, when setting up a program, it is recommended to keep the actual implementations
-in the program body at minimum. Reusing implementations from modules allows to write
-reusable code and focus in the program unit only on translating user input to the
-respective library functions and objects.</p>
+in the program body at minimum. Reusing implementations from modules allows you to write 
+reusable code and focus the program unit on conveying user input to the respective library 
+functions and objects.</p>
 
 
       <div class="container-flex">
