Jekyll build, commit fad1ca029cbcaf9934a30f0d3a7610bcdf0bac72 (on:push)

--- a/learn/best_practices/arrays.html
+++ b/learn/best_practices/arrays.html
@@ -1048,7 +1048,7 @@ arrays in case non-contiguous array strides are passed.</p>
 </span></code></pre></div></div>
 
 <p>Finally, there are <em>assumed-size</em> arrays, which provide the least compile-time and run-time
-checking and can be found be found frequently in legacy code. They should be avoided
+checking and can be found frequently in legacy code. They should be avoided
 in favour of <em>assumed-shape</em> or <em>assumed-rank</em> arrays.
 An <em>assumed-size</em> array dummy argument is identified by an asterisk as the last dimension,
 this disables the usage of this array with many intrinsic functions, like <code class="highlighter-rouge">size</code> or
