Jekyll build, commit 329e093c5534e01017fa1c1dd65e5f646682c4c2 (on:push)

--- a/learn/os_setup/install_gfortran.html
+++ b/learn/os_setup/install_gfortran.html
@@ -659,7 +659,7 @@
 <ul>
   <li><strong>Cygwin:</strong> A runtime environment that provides POSIX compatibility to Windows;</li>
   <li><strong>MSYS2:</strong> A collection of Unix-like development tools, based on modern Cygwin and MinGW-w64;</li>
-  <li><strong>Windows Subsystem for Linux (WSL):</strong> An official compatibility layer for running Linux binary executables on Windows.</li>
+  <li><strong>Windows Subsystem for Linux (WSL):</strong> An official compatibility layer for running Linux binary executables on Windows. With <a href="https://github.com/microsoft/wslg">Windows Subsystem for Linux GUI</a> one can run text editors and other graphical programs.</li>
 </ul>
 
 <p>All of the above approaches provide access to common shells such as bash and development tools including GNU coreutils, Make, CMake, autotools, git, grep, sed, awk, ssh, etc.</p>
